--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "plugin-foreign-env"]
 	path = plugin-foreign-env
 	url = https://github.com/oh-my-fish/plugin-foreign-env
+[submodule ".config/alacritty/themes"]
+	path = .config/alacritty/themes
+	url = https://github.com/alacritty/alacritty-theme
